--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -323,6 +323,10 @@
         <i class="fa-solid fa-download"></i>&nbsp;
         تصدير الأعضاء 
       </button>
+      <button mat-menu-item class="primary" (click)="add()">
+        <i class="fa-regular fa-square-plus"></i>&nbsp;
+        إضافة أشتراك 
+      </button>
     </mat-menu>
 </button>
 
