--- a/src/app/admin/all-subscription/all-subscription.component.html
+++ b/src/app/admin/all-subscription/all-subscription.component.html
@@ -22,11 +22,20 @@
                     </span>
                   </div>
                   <div><b>{{'common.name' | translate}}:</b> {{element.name}}</div>
-                  <small *ngIf="!element.isMain" class="text-success">
-                    {{element.mainMemberName}} <i class="fa-solid fa-star"></i>
+                  <small class="text-success">
+                    {{element.mainMemberName}} <i *ngIf="!element.isMain" class="fa-solid fa-star"></i>
                   </small>
+                  <div> <b>{{'common.totalCost' | translate}}:</b>
+                    {{element.totalCost}} جنيه
+                  </div>
+                  <div> <b>{{'common.paid' | translate}}: &nbsp;</b> {{element.paid}} جنيه</div> 
+                  <div>
+                    <b>{{'common.remaining' | translate}}:</b> 
+                    {{ element.totalCost - element.paid }} 
+                    جنيه
+                  </div>
                   <div class="d-flex">
-                    <b>{{'common.mobile' | translate}}:</b>
+                    <b>{{'common.mobile' | translate}}:&nbsp;</b>
                     {{ element.mobile }}
                   </div>
                   <div><b>{{'common.birthDate' | translate}}:</b> {{ element.birthDate.toMillis() | date }}</div>
@@ -69,12 +78,12 @@
 
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.name' | translate}}</th>
-            <td mat-cell *matCellDef="let element" class="col-2">
+            <td mat-cell *matCellDef="let element" class="col-3">
               <div class="d-flex">
                 <div class="d-flex flex-column">
                   <div>{{element.name}}</div>
-                  <small *ngIf="!element.isMain" class="text-success">
-                    {{element.mainMemberName}} <i class="fa-solid fa-star"></i>
+                  <small class="text-success">
+                    {{element.mainMemberName}} <i *ngIf="!element.isMain" class="fa-solid fa-star"></i>
                   </small>
                 </div>
                 <div class="px-2">
@@ -111,7 +120,7 @@
     
           <ng-container matColumnDef="gender">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.gender' | translate}}</th>
-            <td mat-cell *matCellDef="let element" class="col-1">
+            <td mat-cell *matCellDef="let element">
               <ng-container [ngSwitch]="element.gender">
                 <div *ngSwitchCase="1">
                   {{ 'common.male' | translate }}
@@ -141,6 +150,28 @@
             <td mat-cell *matCellDef="let element">{{ element.transportationName }}</td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
+
+          <ng-container matColumnDef="total">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.totalCost' | translate}}</th>
+            <td mat-cell *matCellDef="let element">
+              {{element.totalCost}}
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+
+        <ng-container matColumnDef="paid">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.paid' | translate}}</th>
+            <td mat-cell *matCellDef="let element">{{element.paid}}</td>
+            <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+
+        <ng-container matColumnDef="remaining">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.remaining' | translate}}</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.totalCost - element.paid }}
+            </td>
+            <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
 
           <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -181,7 +212,7 @@
   </div>
 </div>
 
-<button mat-icon-button color="primary" class="mobile-filter-button d-flex" [matMenuTriggerFor]="menu">
+<button mat-icon-button color="primary" class="mobile-filter-button d-flex justify-content-center" [matMenuTriggerFor]="menu">
   <i class="fa-solid fa-ellipsis-vertical"></i>
   <mat-menu #menu="matMenu">
     <button mat-menu-item class="primary" (click)="showAdvancedFilter()">
