--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,10 @@
-::ng-deep {
-  .mat-mdc-tab-body-content {
-    max-height: calc(100vh - 160px) !important;
-  }
-}
+// ::ng-deep {
+//   .main-tabs {
+//     .mat-mdc-tab-body-content {
+//       max-height: calc(100vh - 160px) !important;
+//     }
+//   }
+// }
 
 .info-section {
   height: calc(100% - 110px);
