--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,7 @@ html, body {
 body {
   background-color: #ECEFEF !important;
   width: 100%;
-  overflow: hidden;
+  // overflow: hidden;
   user-select: none;
 }
 
@@ -73,19 +73,19 @@ button:focus {
   .customDialogPanelClass-md {
     width: 400px !important;
   }
-  
-  
+
+
   .customDialogPanelClass-lg {
     width: 800px !important;
   }
-  
+
   .customDialogPanelClass-xlg {
     width: 1000px !important;
   }
 }
 
 @media (max-width: 769px) {
-  .customDialogPanelClass-sm, .customDialogPanelClass-md, 
+  .customDialogPanelClass-sm, .customDialogPanelClass-md,
   .customDialogPanelClass-lg, .customDialogPanelClass-xlg {
     max-width: 100% !important;
     min-width: 100% !important;
@@ -145,7 +145,7 @@ button:focus {
       width: 100%;
     }
   }
-  
+
 }
 @media (max-width: 769px) {
   .table-container {
